--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <nav>
         <ul>
-            <li><a href="#">Головна</a></li>
+            <li><a href="index.html">Головна</a></li>
             <li><a href="category/safe/product.html">Акустичні сейфи</a></li>
             <li><a href="category/searchSystem/product.html">Пошукові системи</a></li>
             <li><a href="#">Категорія 3</a></li>
