--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Защита от утечки акустической информации</title>
+    <title>Захист від витоку акустичної информації</title>
     <link rel="stylesheet" type="text/css" href="style_index.css">
 </head>
 <body>
@@ -14,8 +14,12 @@
         <ul>
             <li><a href="index.html">Головна</a></li>
             <li><a href="category/safe/product.html">Акустичні сейфи</a></li>
-            <li><a href="category/searchSystem/product.html">Пошукові системи</a></li>
-            <li><a href="#">Категорія 3</a></li>
+            <li><a href="category/searchSystem/product.html">Пошукові системи Delta S/X</a></li>
+            <li><a href="category/fieldindicators/product.html">Індикатори поля</a></li>
+            <li><a href="category/LocatorsOfNonLinearTransitions/product.html">Локатори нелінійних переходів</a></li>
+            <li><a href="category/AnotherSearchTechnique/product.html">Інша пошукова техніка</a></li>
+            <li><a href="category/Anti-leakageEquipment/product.html">Обладнання протидії витоку інформації</a></li>
+            
             <li><a href="category/card/cart.html">Корзина</a></li>
         </ul>
     </nav>
@@ -27,12 +31,35 @@
 
         </div>
         <div class="category">
-            <h2>Пошукові системи</h2>
+            <h2>Пошукові системи Delta S/X</h2>
             <p>Асортимент сейфів для захисту акустичної інформації від несанкціонованого доступу та витоку.</p>
             <a href="category/searchSystem/product.html">Переглянути деталі</a>
 
         </div>
-        <!-- Тут додавати інші категорії товарів -->
+        <div class="category">
+            <h2>Індикатори поля</h2>
+            <p>Асортимент сейфів для захисту акустичної інформації від несанкціонованого доступу та витоку.</p>
+            <a href="category/fieldindicators/product.html">Переглянути деталі</a>
+
+        </div>
+        <div class="category">
+            <h2>Локатори нелінійних переходів</h2>
+            <p>Асортимент сейфів для захисту акустичної інформації від несанкціонованого доступу та витоку.</p>
+            <a href="category/LocatorsOfNonLinearTransitions/product.html">Переглянути деталі</a>
+
+        </div>
+        <div class="category">
+            <h2>Інша пошукова техніка</h2>
+            <p>Асортимент сейфів для захисту акустичної інформації від несанкціонованого доступу та витоку.</p>
+            <a href="category/AnotherSearchTechnique/product.html">Переглянути деталі</a>
+
+        </div>
+        <div class="category">
+            <h2>Обладнання протидії витоку інформації</h2>
+            <p>Асортимент сейфів для захисту акустичної інформації від несанкціонованого доступу та витоку.</p>
+            <a href="category/Anti-leakageEquipment/product.html">Переглянути деталі</a>
+
+        </div>
     </div>
 </body>
 </html>
